# superover

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.ai-worker  Dockerfile.api  Dockerfile.media-worker  Dockerfile.worker  FRONTEND_INTEGRATION.md  GEMINI.md  LOCAL_DEVELOPMENT.md  config.py  deploy.sh  pre-deploy.sh  pyproject.toml  pytest.ini  readme.md  requirements-test.txt  requirements.txt  ruff.toml  run_tests.sh  scene_analysis_schema.json
api/: main.py
audio_extractor/: Dockerfile  extractor.py  main.py  models.py
common/: storage.py
common/media_utils/: pyproject.toml
common/media_utils/src/media_utils/: audio.py  inspector.py  models.py  processor.py
deployment/: deploy_audio_extractor.sh  deploy_job_creator.sh  deploy_media_inspector.sh  deploy_scene_analyzer.sh  deploy_video_processor.sh  deploy_workflow_manager.sh  pipeline_orchestrator.yaml  setup_gcp_resources.sh
docs/: ARCHITECTURE.md  DATABASE.md  QUICKSTART.md  RUN_LOCALLY.md  audio_extractor_lld.md  demo-video-transcript.md  lld.md  media-worker-sequence.mmd  media_inspector_lld.md  scene-worker-sequence.mmd  scene_analyzer_lld.md  video_processor_lld.md
frontend/: .eslintrc.json  Dockerfile  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
job_creator/: main.py  requirements.txt
libs/: __init__.py  database.py  storage.py
media_inspector/: Dockerfile  inspector.py  main.py  models.py
scene_analyzer/: Dockerfile  analyzer.py  main.py  models.py
scripts/: bigquery_setup.sql  build-and-push.sh  cleanup.sh  configure-post-terraform.sh  deploy.sh  deployment-status.sh  import-state.sh
terraform/: README.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example  variables.tf
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  test_critical.py  test_images.py  test_media_integration.py
video_processor/: Dockerfile  main.py  models.py  processor.py
workers/: __init__.py  ai_worker.py  health.py  media_worker.py  scene_worker.py  unified_worker.py  (+1 more)
(+271 files in other folders)
