[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "super-over-alchemy"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "typer[all]",
    "pymediainfo",
    "pydantic",
]

[project.scripts]
media-inspector = "media_inspector.main:app"
