[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "super-over-alchemy"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "typer[all]",
    "pymediainfo",
    "pydantic",
    "ffmpeg-python",
]

[project.scripts]
media-inspector = "media_inspector.main:main"
audio-extractor = "audio_extractor.main:main"
video-processor = "video_processor.main:main"

[tool.setuptools]
packages = ["media_inspector", "audio_extractor", "video_processor"]
