[project]
name = "super_over_media_utils"
version = "0.1.0"
description = "A shared library for media processing in the Super Over Alchemy project."
authors = [{ name = "Gemini", email = "gemini@google.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
